<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SF Moto Parking</string>
    <string name="title_activity_main">Moto Parking</string>
    <string name="title_activity_gms_error">Google Play Error</string>
    <string name="title_map_section">Parking Map</string>
    <string name="title_account_section">Account</string>
    <string name="title_settings_section">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_url">API URL</string>
    <string name="pref_gps_zoom">Zoom in on GPS fix</string>
    <string name="pref_summary_pref_gps_zoom">When your location is found, zoom the map towards the location automatically</string>
    <string name="pref_dev_mode">Dev Mode</string>
    <string-array name="pref_dev_mode_entries">
        <item>Normal</item>
        <item>Dev</item>
    </string-array>

    <string name="title_activity_create_spot">Create Parking Spot</string>
    <string name="title_activity_edit_spot">Edit Parking Spot</string>
    <string name="edit_spot_name">Spot Name</string>
    <string name="edit_spot_desc">Description</string>
    <string name="edit_spot_count">Number of spaces</string>
    <string name="edit_spot_paid">Paid/Metered Spots?</string>
    <string name="edit_spot_delete">Delete</string>
    <string name="edit_spot_move">Move</string>
    <string name="edit_spot_save">Save location</string>
    <string name="edit_spot_delete_confirm">Are you sure you want to delete?</string>
    <string name="edit_spot_move_success">Saved new location</string>
    <string name="edit_spot_move_cancel">Move canceled</string>
    <string name="error_field_required">This field is required</string>

    <string name="account_nickname">Nickname</string>
    <string name="account_password">Password</string>
    <string name="account_save">Save</string>
    <string name="account_set_pw">Set Password</string>
    <string name="account_change_pw">Change Password</string>
    <string name="account_new_password">Enter New Password</string>
    <string name="account_new_password_confirm">Confirm Password</string>
    <string name="account_progress_initial">Checking connectivity</string>
    <string name="account_progress_save">Saving</string>
    <string name="account_save_success">Account Saved</string>
    <string name="account_save_error">Connection error, cannot save</string>
    <string name="account_no_network">No network access, cannot save</string>
</resources>
