<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="api_url"
        android:title="@string/pref_url"
        android:defaultValue="http://sfmotoparking.com/"
        android:selectAllOnFocus="true"
        android:inputType="textUri|textNoSuggestions"
        android:singleLine="true" />
    <CheckBoxPreference
        android:key="gps_zoom"
        android:title="@string/pref_gps_zoom"
        android:summary="@string/pref_summary_pref_gps_zoom" />
    <EditTextPreference
        android:key="nickname"
        android:title="nickname"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />
    <EditTextPreference
        android:key="password"
        android:title="password"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

</PreferenceScreen>
