<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.nosepass.motoparking.CreateSpotActivity.CreateParkingSpotFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/previewContainer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp">

            <FrameLayout
                android:id="@+id/previewImageContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/preview"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dummy_create_preview"
                    android:scaleType="centerCrop"
                    android:contentDescription="preview"
                    tools:ignore="HardcodedText"
                    />

                <ImageView
                    android:id="@+id/pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/pin_white"
                    android:contentDescription="@string/crosshair_pin_cdesc" />

            </FrameLayout>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/previewProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@android:style/Widget.ProgressBar.Large"
                />

        </FrameLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_spot_name"
            android:inputType="textCapWords"
            />

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_spot_desc"
            android:lines="3"
            android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
            />

        <EditText
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_spot_count"
            android:inputType="number"
            />

        <CheckBox
            android:id="@+id/paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_spot_paid"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_spot_delete" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_spot_save" />
    </LinearLayout>


</RelativeLayout>
